--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,15 @@
         "corejs": 3
       }
     ],
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
-  "plugins": ["@babel/proposal-class-properties", "@babel/proposal-object-rest-spread"]
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
+  ]
 }
