--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/compose-function": "^0.0.30",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -42,6 +44,7 @@
     "postcss-loader": "^7.2.4",
     "postcss-preset-env": "^8.3.1",
     "prettier": "^2.8.7",
+    "react-refresh": "^0.14.0",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.2",
     "tailwindcss": "^3.3.1",
@@ -51,7 +54,9 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "compose-function": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   }
 }
