--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "compose-function": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0"
   }
 }
