--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "interfax-test",
   "version": "1.0.0",
   "description": "",
+  "homepage": ".",
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --env mode=development",
